# Quick.Benchmark

./: .clang-format  CMakeLists.txt  CMakePresets.json  conanfile.txt
benchmark/: CMakeLists.txt  RowMajorVsColumnMajor.cpp  main.cpp
lib/: CMakeLists.txt
lib/include/tcc/: Matrix.h  MatrixUtils.h
src/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  Matrix.test.cpp
